# django-api

./: .gitignore  Makefile  pyproject.toml  requirements.txt
.github/workflows/: makefile.yml
apps/school/: admin.py  apps.py  models.py
apps/school/migrations/: 0001_initial.py  0002_course.py  0003_alter_course_description.py  0004_alter_course_options_alter_student_options.py  0005_alter_course_options_alter_student_options.py  0006_alter_student_options.py  0007_alter_student_options.py  0008_alter_student_options_alter_student_birth_date_and_more.py  0009_alter_course_level.py
locale/en/LC_MESSAGES/: django.po
locale/pt_bt/LC_MESSAGES/: django.po
setup/: asgi.py  settings.py  urls.py  wsgi.py
