[tool.poetry]
name = "django-api"
version = "0.1.0"
description = ""
authors = ["Danilo Nascimento <daconnas.dcn@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.1"
djangorestframework = "^3.13.1"
Markdown = "^3.3.6"
django-admin-interface = "^0.18.5"

[tool.poetry.dev-dependencies]
rick = "^0.1.2"
rich = "^11.0.0"
flake8 = "^4.0.1"
isort = "^5.10.1"
mypy = "^0.931"
black = "^21.12b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
